--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/kimsj/Documents/Courses/CSSE 477/Programming/Brahma/jython-2.5.3.jar"/>
+	<classpathentry kind="lib" path="jython-2.5.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
